Add WIP color picker